--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000",
+    "dev": "concurrently \"npm run server\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "framer-motion": "^4.1.17"
+    "concurrently": "^7.6.0",
+    "framer-motion": "^4.1.17",
+    "json-server": "^0.17.1"
   }
 }
